--- a/client/src/styles/content.scss
+++ b/client/src/styles/content.scss
@@ -1,8 +1,7 @@
 #content{
-  flex: 1 1 auto;
+  //flex: 1 1 auto;
   margin: auto;
   width: 80%;
-  min-width: 820px;
+  //min-width: 820px;
   padding: 10px;
-  background-color: $em-bg-gray;
 }
