--- a/client/src/styles/header.scss
+++ b/client/src/styles/header.scss
@@ -17,6 +17,7 @@
       min-width: 100px;
       color: #fff;
       margin: 0 10px;
+      font-weight: bold;
     }
   }
   .right-content{
@@ -34,6 +35,15 @@
         overflow: hidden;
         white-space: nowrap;
         color: #fff;
+        text-decoration: none;
+        font-weight: 600;
+
+        &:hover{
+          color: #ddd;
+        }
+        &:active{
+          color: #ccc;
+        }
       }
     }
     .profile{
