--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -1,5 +1,6 @@
 @import './reset.scss';
 @import './variables.scss';
+@import './calendar.scss';
 
 @import './header.scss';
 @import './content.scss';
