--- a/client/src/styles/profile.scss
+++ b/client/src/styles/profile.scss
@@ -1,21 +1,37 @@
 #profile{
-  width: 80%;
+  width: 65%;
   margin: auto;
+  background-color: $em-bg-white;
+  border: 1px solid #e6ecf5;
+  margin: 10px;
 
   form{
     .form-control{
-      padding: 20px 0;
+      padding: 20px;
+      display: flex;
+      align-items: center;
+      border-bottom: 1px solid #e6ecf5;
 
       .field-label{
-        font-size: 24px;
-        padding: 10px 0;
+        padding: 5px 0;
+        width: 50%;
+        font-weight: 500;
       }
       .field-value{
         padding: 10px 0 0 0;
 
         input, select, textarea{
-          height: 39.2px;
-          font-size: 100%;
+          height: 30px;
+          font-size: 13px;
+          width: 300px;
+          outline: none;
+          border: 1px solid #e6ecf5;
+          color: #888da8;
+
+          &:disabled{
+            cursor: default;
+            opacity: 0.6;
+          }
         }
         textarea{
           height: 100px;
@@ -29,7 +45,6 @@
           margin: 0 0 4px;
           max-width: 100%;
           padding: 8px;
-          width: 100%;
           outline: none;
 
           &:focus{
@@ -38,6 +53,18 @@
         }
         button{
           padding: 8px 16px;
+          border-radius: 10px;
+          margin-right: 5px;
+          color: #888da8;
+          outline: none;
+          font-weight: 500;
+
+          &:active{
+            font-weight: 600;
+          }
+          &:hover{
+            opacity: 0.8;
+          }
         }
       }
     }
