--- a/client/src/styles/calendar.scss
+++ b/client/src/styles/calendar.scss
@@ -104,7 +104,8 @@
   width: 350px;
   max-width: 100%;
   background: white;
-  border: 1px solid #e6ecf5;
+  //border: 1px solid #e6ecf5;
+  border: none;
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.125em;
 }
