--- a/client/src/styles/profile.scss
+++ b/client/src/styles/profile.scss
@@ -7,7 +7,7 @@
   margin: 10px;
 
   form{
-    .form-control{
+    .em-form-control{
       padding: 20px;
       display: flex;
       align-items: center;
