--- a/client/src/styles/calendar.scss
+++ b/client/src/styles/calendar.scss
@@ -201,3 +201,7 @@ button.react-calendar__tile--active:enabled:focus {
 .react-calendar--selectRange .react-calendar__tile--hover {
   background-color: #e6e6e6;
 }
+//----Overrides----//
+button{
+  font-size: 0.75em;
+}
