--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -1,3 +1,4 @@
+@import '../../../node_modules/bootstrap/dist/css/bootstrap.css';
 @import './reset.scss';
 @import './variables.scss';
 @import './calendar.scss';
