--- a/server/views/emlogin.ejs
+++ b/server/views/emlogin.ejs
@@ -32,7 +32,7 @@
                             <label for="email">
                                 Email address:
                             </label>
-                            <div class="form-control">
+                            <div class="em-form-control">
                                 <input type="text" name="email" />
                             </div>
                         </div>
@@ -40,15 +40,15 @@
                             <label for="password">
                                 Password:
                             </label>
-                            <div class="form-control">
+                            <div class="em-form-control">
                                 <a href="#">Forgot Password?</a>
                             </div>
-                            <div class="form-control">
+                            <div class="em-form-control">
                                 <input type="password" name="password" />
                             </div>
                         </div>
                         <div class="form-group">
-                            <button type="submit" class="form-control">Login</button>
+                            <button type="submit" class="em-form-control">Login</button>
                         </div>
                     </form>
                 </div>
