--- a/server/views/emsignup.ejs
+++ b/server/views/emsignup.ejs
@@ -32,7 +32,7 @@
                         <label for="email">
                             Email address:
                         </label>
-                        <div class="form-control">
+                        <div class="em-form-control">
                             <input type="text" name="email" />
                         </div>
                     </div>
@@ -40,12 +40,12 @@
                         <label for="password">
                             Password:
                         </label>
-                        <div class="form-control">
+                        <div class="em-form-control">
                             <input type="password" name="password" />
                         </div>
                     </div>
                     <div class="form-group">
-                        <button type="submit" class="form-control">Submit</button>
+                        <button type="submit" class="em-form-control">Submit</button>
                     </div>
                 </form>
             </div>
