--- a/server/views/login.ejs
+++ b/server/views/login.ejs
@@ -19,11 +19,11 @@
     <form action="/login" method="post">
         <div class="form-group">
             <label>Email</label>
-            <input type="text" class="form-control" name="email">
+            <input type="text" class="em-form-control" name="email">
         </div>
         <div class="form-group">
             <label>Password</label>
-            <input type="password" class="form-control" name="password">
+            <input type="password" class="em-form-control" name="password">
         </div>
 
         <button type="submit" class="btn btn-warning btn-lg">Login</button>
