--- a/server/views/signup.ejs
+++ b/server/views/signup.ejs
@@ -25,11 +25,11 @@
     <form action="/signup" method="post">
         <div class="form-group">
             <label>Email</label>
-            <input type="text" class="form-control" name="email">
+            <input type="text" class="em-form-control" name="email">
         </div>
         <div class="form-group">
             <label>Password</label>
-            <input type="password" class="form-control" name="password">
+            <input type="password" class="em-form-control" name="password">
         </div>
 
         <button type="submit" class="btn btn-warning btn-lg">Signup</button>
