--- a/client/src/styles/createpost.scss
+++ b/client/src/styles/createpost.scss
@@ -1,4 +1,4 @@
-#profile{
+#create-post{
   width: 65%;
   min-width: 654px;
   margin: auto;
@@ -40,7 +40,7 @@
           resize: none;
         }
 
-        input, textarea{
+        input[type="text"], textarea{
           background-color: $em-bg-gray;;
           border-radius: 3px;
           border: 1px solid rgba(0,0,0,.12);
@@ -53,13 +53,12 @@
             background-color: $em-bg-white;
           }
         }
-        button{
-          padding: 8px 16px;
+        input[type="reset"], input[type="submit"]{
           border-radius: 10px;
           margin-right: 5px;
           color: #888da8;
           outline: none;
-          font-weight: 500;
+          width: 100px;
 
           &:active{
             font-weight: 600;
