--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -7,16 +7,24 @@
 @import './content.scss';
 @import './profile.scss';
 @import './posts.scss';
+@import './createpost.scss';
 
+//::selection {
+//  color: #fff;
+//  background-color: #ddd;
+//}
 body{
   margin: 0;
-  font-family: Roboto,-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Arial,sans-serif;
-  font-size: .850rem;
-  font-weight: 400;
-  line-height: 1.6;
+  font-family: sans-serif;
+  font-size: 14px;
   color: #888da8;
   background-color: #edf2f6;
 }
+body, input, textarea, select, header, article, section, aside {
+  line-height: 1.6;
+  letter-spacing: 0.5px;
+}
+
 
 .app {
   height: 100%;
