--- a/client/src/styles/header.scss
+++ b/client/src/styles/header.scss
@@ -7,7 +7,10 @@
   border-bottom: 1px solid $em-border-gray;
   background-color: $em-bg-white;
   position: sticky;
-  -webkit-position: sticky;
+  position: -webkit-sticky;
+  position: -moz-sticky;
+  position: -ms-sticky;
+  position: -o-sticky;
   top: 0px;
   background-color: #3f4257;
   z-index: 100;
