Adding Spinner module

--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -9,6 +9,8 @@
 @import './posts.scss';
 @import './createpost.scss';
 
+@import './spinner.scss';
+
 ::selection {
   background-color: #e6e6e6;
 }
