Spinner for Posts, css fixes

--- a/client/src/styles/calendar.scss
+++ b/client/src/styles/calendar.scss
@@ -191,12 +191,12 @@ button.react-calendar__tile--hasActive:enabled:focus {
   background: #a9d4ff;
 }
 .react-calendar__tile--active {
-  background: #9a9fbf;
+  background: #888da8;
   color: white;
 }
 button.react-calendar__tile--active:enabled:hover,
 button.react-calendar__tile--active:enabled:focus {
-  background: #9a9fbf;
+  background: #888da8;
 }
 .react-calendar--selectRange .react-calendar__tile--hover {
   background-color: #e6e6e6;
