--- a/client/src/styles/profile.scss
+++ b/client/src/styles/profile.scss
@@ -40,7 +40,7 @@
           resize: none;
         }
 
-        input, textarea{
+        input[type="text"], textarea{
           background-color: $em-bg-gray;;
           border-radius: 3px;
           border: 1px solid rgba(0,0,0,.12);
@@ -54,16 +54,16 @@
             background-color: $em-bg-white;
           }
         }
-        button{
-          background: none;
-          padding: 8px 16px;
+        input[type="reset"], input[type="submit"]{
+          border-radius: 10px;
+          margin-right: 5px;
           color: #888da8;
-          -webkit-outline: none;
           outline: none;
-          font-weight: bold;
-          font-size: 12px;
+          width: 100px;
+          background: none;
 
           &:active{
+            font-weight: 600;
           }
           &:hover{
             opacity: 0.8;
