--- a/client/src/styles/spinner.scss
+++ b/client/src/styles/spinner.scss
@@ -1,11 +1,12 @@
 .em-spinner{
   position: absolute;
-  top: 0;
-  left: 0;
-  margin: 0 auto;
-  width: 100%;
-  height: 100%;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
+  background-color: rgba(0, 0, 0, 0.1);
   z-index: 1100;
-  background-color: #000;
-  opacity: 0.1;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
 }
