--- a/client/src/styles/profile.scss
+++ b/client/src/styles/profile.scss
@@ -1,10 +1,9 @@
 #profile{
-  width: 65%;
-  min-width: 654px;
-  margin: auto;
+  width: 80%;
+  min-width: 700px;
+  margin: 10px auto;
   background-color: $em-bg-white;
   border: 1px solid #e6ecf5;
-  margin: 10px;
 
   form{
     .em-form-control{
