--- a/client/src/styles/spinner.scss
+++ b/client/src/styles/spinner.scss
@@ -1,12 +1,12 @@
 .em-spinner{
   position: absolute;
-  top: 0px;
-  left: 0px;
-  right: 0px;
-  bottom: 0px;
-  background-color: rgba(0, 0, 0, 0.1);
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(255, 255, 255, 0.1);
   z-index: 1100;
   height: 100%;
   width: 100%;
-  overflow: hidden;
+  display: block;
 }
