--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -3,6 +3,7 @@
 @import './variables.scss';
 @import './calendar.scss';
 @import './spinner.scss';
+@import './placesautocomplete.scss';
 
 @import './header.scss';
 @import './content.scss';
@@ -10,6 +11,7 @@
 @import './posts.scss';
 @import './createpost.scss';
 
+@import '../../../node_modules/react-datepicker/dist/react-datepicker.css';
 
 ::selection {
   background-color: #e6e6e6;
