--- a/client/src/styles/posts.scss
+++ b/client/src/styles/posts.scss
@@ -152,6 +152,28 @@
           //text-transform: uppercase;
           font-size: 11px;
         }
+        .new-comment-container{
+          .new-comment{
+            height: 60px;
+            width: 100%;
+            resize: none;
+            border-radius: 5px;
+            border: 1px solid rgba(0,0,0,.12);
+            margin: 5px 0;
+            padding: 8px;
+            background-color: $em-bg-gray;
+            font-size: 12px;
+            line-height: 14px;
+
+            outline: none;
+            -moz-outline: none;
+            -webkit-outline: none;
+
+            &:focus{
+              background-color: $em-bg-white;
+            }
+          }
+        }
         .comments-list {
           .comment-item{
             padding: 5px 0;
@@ -201,7 +223,28 @@
                 //text-transform: uppercase;
                 font-size: 11px;
               }
+              .new-reply-container{
+                .new-reply{
+                  height: 60px;
+                  width: 100%;
+                  resize: none;
+                  border-radius: 5px;
+                  border: 1px solid rgba(0,0,0,.12);
+                  margin: 5px 0;
+                  padding: 8px;
+                  background-color: $em-bg-gray;
+                  font-size: 12px;
+                  line-height: 14px;
 
+                  outline: none;
+                  -moz-outline: none;
+                  -webkit-outline: none;
+
+                  &:focus{
+                    background-color: $em-bg-white;
+                  }
+                }
+              }
               .reply-item {
                 padding: 5px 0;
                 margin: 5px 0;
@@ -238,26 +281,6 @@
                 }
               }
             }
-          }
-        }
-        .new-comment{
-          height: 60px;
-          width: 100%;
-          resize: none;
-          border-radius: 5px;
-          border: 1px solid rgba(0,0,0,.12);
-          margin: 5px 0;
-          padding: 8px;
-          background-color: $em-bg-gray;
-          font-size: 12px;
-          line-height: 14px;
-
-          outline: none;
-          -moz-outline: none;
-          -webkit-outline: none;
-
-          &:focus{
-            background-color: $em-bg-white;
           }
         }
       }
