--- a/client/src/styles/posts.scss
+++ b/client/src/styles/posts.scss
@@ -32,7 +32,7 @@
 
           .post-date{
             background-color: #fff;
-            padding: 0;
+            padding: 0 5px;
             font-size: 11px;
           }
         }
