--- a/client/src/styles/createpost.scss
+++ b/client/src/styles/createpost.scss
@@ -17,11 +17,6 @@
         width: 35%;
         min-width: 200px;
         font-weight: bold;
-
-        .sub-text{
-          font-weight: normal;
-          font-size: 12px;
-        }
       }
       .field-value{
         padding: 10px 0 0 0;
@@ -67,13 +62,17 @@
           width: 100px;
           background: none;
 
-          &:active{
+          &:active:enabled{
             font-weight: 600;
           }
-          &:hover{
+          &:hover:enabled{
             opacity: 0.8;
           }
         }
+      }
+      .sub-text{
+        font-weight: normal;
+        font-size: 12px;
       }
     }
   }
