--- a/client/src/styles/createpost.scss
+++ b/client/src/styles/createpost.scss
@@ -17,13 +17,14 @@
         width: 35%;
         min-width: 200px;
         font-weight: bold;
+        color: #545566;
       }
       .field-value{
         padding: 10px 0 0 0;
 
         input, select, textarea{
           height: 30px;
-          font-size: 13px;
+          font-size: 12px;
           width: 450px;
           outline: none;
           border: 1px solid #e6ecf5;
@@ -71,6 +72,7 @@
         }
       }
       .sub-text{
+        color: #9a9c9b;
         font-weight: normal;
         font-size: 12px;
       }
