--- a/client/src/styles/profile.scss
+++ b/client/src/styles/profile.scss
@@ -17,13 +17,14 @@
         width: 45%;
         min-width: 200px;
         font-weight: bold;
+        color: #545566;
       }
       .field-value{
         padding: 10px 0 0 0;
 
         input, select, textarea{
           height: 30px;
-          font-size: 13px;
+          font-size: 12px;
           width: 300px;
           outline: none;
           border: 1px solid #e6ecf5;
@@ -35,7 +36,7 @@
           }
         }
         textarea{
-          height: 100px;
+          height: 120px;
           resize: none;
         }
 
@@ -68,6 +69,11 @@
             opacity: 0.8;
           }
         }
+      }
+      .sub-text{
+        color: #9a9c9b;
+        font-weight: normal;
+        font-size: 12px;
       }
     }
   }
