Fixed comment implementation, modified comments design in redux store, comments css fixes

--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -9,6 +9,7 @@
 @import './content.scss';
 @import './profile.scss';
 @import './posts.scss';
+@import './comments.scss';
 @import './createpost.scss';
 
 @import '../../../node_modules/react-datepicker/dist/react-datepicker.css';
